# temp-poc

./: .dockerignore  .gitignore  README.md  compose.yaml  features.yaml  pyproject.toml
.github/workflows/: promote.yaml
chart/: Chart.yaml  values.schema.json  values.yaml
chart/templates/: _helpers.tpl
chart/templates/batch-analyzer/: cronjob.yaml
chart/templates/dataset-ingest/: deployment.yaml  service.yaml
chart/templates/karmada/: dataset-ingest-propagation-policy.yaml  override-policy.yaml
chart/templates/report-generator/: deployment.yaml  service.yaml
deploy/dev/: configmap.yaml
docs/: create-and-enroll-child.md  scalex-federation-child-contract.md
features/batch-analyzer/: feature.yaml
features/batch-analyzer/chart/: Chart.yaml  values.schema.json  values.yaml
features/batch-analyzer/image/: payload.txt
features/batch-analyzer/src/: README.md
features/dataset-ingest/: feature.yaml
features/dataset-ingest/chart/: Chart.yaml  values.schema.json  values.yaml
features/dataset-ingest/image/: .containerignore  payload.txt
features/dataset-ingest/src/: README.md
features/report-generator/: feature.yaml
images/batch-analyzer/: Containerfile
images/dataset-ingest/: Dockerfile
images/report-generator/: Dockerfile
schemas/: feature.schema.json
scripts/: README.md  apply-image-metadata.sh  build-images.sh  create-promotion-payload.sh  discover-images.sh  export_contract.py  policy.py  publish-promotion-artifact.sh  push-images.sh  test.sh  validate-render.sh  validate.py
smurfx/: request.yaml
src/temp_poc/: batch_analyzer.py  dataset.py  dataset_ingest.py  errors.py  http_client.py  models.py  report_generator.py
tests/: test-chart-layout.sh  test-promotion-scripts.sh  test-promotion-workflow.sh  test-publish-promotion-artifact.sh  test_contract.py  test_dataset.py  test_report.py
tests/fixtures/: fake-docker.sh  fake-oras.sh
(+20 files in other folders)
